signup, login and reset_password APIs
